Don't always chmod the XDG_RUNTIME_DIR

Since the current user is the owner of the dir, we'll get 0x7700 as
permissions, not just 0x700. With the wrong check, we were always doing
an unnecessary chmod.

Task-number: QTBUG-41735
Change-Id: Ib1fc258fef4bf526baa9c71201f9b78d36f5454f
Reviewed-by: David Faure <david.faure@kdab.com>

cregit: fc2fcacfcc5e644a3463f34e007e89c5f8bfdf22 https://github.com/qt/qtbase/commit/fc2fcacfcc5e644a3463f34e007e89c5f8bfdf22